<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_halaman5_klik"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/tundra_blur"
    tools:context="com.androidaudhitory.group_1.halaman5_klik">

    <TextView
        android:id="@+id/travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/travel"
        android:textColor="#ffffff"
        android:layout_centerInParent="true"
        android:fontFamily="casual"
        android:textSize="30sp" />
    <TextView
        android:id="@+id/nama_tempat"
        android:layout_below="@+id/travel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nama_tempat"
        android:textColor="#ffffff"
        android:fontFamily="casual"
        android:textSize="30sp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"/>
    <TextView
        android:id="@+id/alamat_email"
        android:layout_below="@+id/nama_tempat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alamat_email"
        android:textColor="#ffffff"
        android:layout_centerInParent="true"
        android:fontFamily="casual"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/content"
        android:layout_below="@id/alamat_email"
        android:layout_width="wrap_content"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:layout_marginTop="50dp"
        android:textSize="15dp"
        android:text="@string/content_dua"/>
</RelativeLayout>
