<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tundra1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.androidaudhitory.group_1.tundra1"
    android:scrollbarSize="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/tundra_blur"
            android:gravity="center"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/travel"
                android:textColor="#ffffff"
                android:fontFamily="casual"
                android:textSize="30sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama_tempat"
                android:textColor="#ffffff"
                android:fontFamily="casual"
                android:textSize="30sp"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alamat_email"
                android:textColor="#ffffff"
                android:fontFamily="casual"
                android:textSize="20sp" />
        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/btn1"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="-20dp"
            app:civ_border_width="2dp"
            android:layout_gravity="center"
            app:civ_border_color="#000000"
            android:src="@drawable/ic_keyboard_arrow_down_black_24dp" />

        <RelativeLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <TextView
                android:id="@+id/alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="#DBEDFF"
                android:text="@string/nama_tempat"
                android:textSize="20sp"/>

            <TextView
                android:layout_below="@+id/alamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/content"
                android:layout_marginTop="20dp"
                android:textSize="20sp"/>

        </RelativeLayout>
    </LinearLayout>
</ScrollView>

